--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>weather-app gh</title>
-    <style>
-      h1 {
-        text-align: center;
-        color: pink;
-      }
-    </style>
+    <link href="src/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     <h1>hello Git</h1>
   </body>
+
+  <script src="src/script.js"></script>
 </html>
